--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <main>
-    <img src="images/w05_circles.jpg" width="100%" alt="titleimage"/>
+    <img src="images/w05_circles.jpg" width= 100% alt="titleimage"/>
     
     <div id="background"></div>
 <div class="imagecontainer">
     
-    <img src="images/w05_ice_image_desk.jpg" width= 200 alt="desk"/>
+    <img src="images/w05_ice_image_desk.jpg" width= 400 alt="desk"/>
 
-    <img src="images/w05_ice_image_graphic.png" width= 200 alt="graphic"/>
+    <img src="images/w05_ice_image_graphic.png" width= 400 alt="graphic"/>
 
-    <img src="images/w05_ice_image_person.jpg" width= 200 alt="person"/>
+    <img src="images/w05_ice_image_person.jpg" width= 400 alt="person"/>
 </div>
 </main>
 
